# octo-superpy

./: .gitignore  LICENSE  README.md  app.py  commands.py  current_date_time.txt  generate_data.py  main.py  manage.py  parse.py  plotdata.py  pyproject.toml  readme.md  requirements.txt  superpy.py  utils.py
.github/workflows/: github-actions-octo-superpy.yml
cli_snippets/py_logic.txt/: README.txt  current_day.txt  profit.txt  reports_updated.txt  superpy2.txt  superpy_optional_functionality.txt   transactions.txt
core/: urls.py  views.py
core/templates/core/: dashboard.html
data/: bought.csv  expired.csv  inventory.csv  profit.csv  revenue.csv  revenue_report_last_run.csv  sold.csv
docs/: REPORT.md  USAGE.md
modules/: generate_data.py  inventory.py  reporting.py  time_management.py  utils.py  visualization.py
octo_config/: asgi.py  settings.py  urls.py  wsgi.py
reports/: inventory_report.json
static/css/: styles.css
templates/: expired.html  index.html  index.html_first  inventory.html  visualization.html
tests/: test_generate_data.py  test_inventory.py  test_main_integration.py  test_reporting.py  test_time_management.py  test_visualization.py
